# autosh

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: index.html  install.sh
src/autosh/: __init__.py  __main__.py  ai.py  cli.py  config.py  daemon.py  doctor.py  suggest.py
src/autosh/templates/: autosh.bash  autosh.zsh
