[project]
name = "autosh-ah"
version = "0.1.1"
description = "AutoSH — 一句中文，自动补命令"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "click>=8.0",
    "httpx[socks]>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
autosh = "autosh.cli:main"
ah = "autosh.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autosh"]
